Debugged and fixed the alignment issues

--- a/frontend/src/style/home.css
+++ b/frontend/src/style/home.css
@@ -9,7 +9,8 @@
   width: 100%;
   display: grid;
   grid-template-areas: "a b";
-   grid-template-columns: 60% 40%;
+  grid-template-columns: 1000px 400px;
+  justify-content: space-evenly;
 }
 
 .home-container-display-ip {
@@ -17,31 +18,65 @@
 }
 .home-container-display-control {
   grid-area: b;
+  
 }
-@media screen and (max-width: 1000px) {
-  .home-container-display{
-    grid-template-areas: 
-    "a"
-    "b";
-    grid-template-columns: 100% 100%;
+
+@media screen and (max-width: 1500px) {
+  .home-container-display {
+    grid-template-columns: 900px 400px;
   }
 }
-@media screen and (max-width: 1000px) {
-  .home-container-display-ip {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: auto;
+@media screen and (max-width: 1400px) {
+  .home-container-display {
+    grid-template-columns: 800px 400px;
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1300px) {
+  .home-container-display {
+    grid-template-columns: 700px 400px;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .home-container-display {
+    grid-template-columns: 550px 400px;
+  }
+}
+
+@media screen and (max-width: 1025px) {
+  .home-container-display {
+    grid-template-columns: 500px 400px;
+  }
+}
+@media screen and (max-width: 1000px) {
+  .home-container-display {
+    grid-template-areas:
+      "a"
+      "b";
+    grid-template-columns: 100%;
+    justify-items: center;
+  }
   .home-container-display-ip {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     height: auto;
+  }
+  .home-container-display-control {
+    width: 400px;
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
+}
+
+
+
+@media screen and (max-width: 426px) {
+  .home-container-display-control {
+    width: 90%;
+    margin-left: 1rem;
+    margin-right: 1rem;
   }
 }
